Sequelize Expense setup

--- a/views/index.pug
+++ b/views/index.pug
@@ -10,3 +10,6 @@ block layout-content
       form#guestLogin-form(action="/users/createNewUser", method="POST")
         p Sign in as guest to see sample data
         button(type="submit" name="guest-login") Sign In As Guest
+      form#guestLogin-form(action="/expenses/createNewExpense", method="POST")
+        p Create sample expense
+        button(type="submit" name="create-sample-expense") Create Expense
