Generate sample data
Removed guest sign in, Expense Description and Expense Notes because they weren't necessary

--- a/views/edit-expense-form.pug
+++ b/views/edit-expense-form.pug
@@ -15,7 +15,7 @@ block layout-content
         div.new-expense-input
           div Amount: 
           input(type="number", step=".01", name="amount", value=amount)
-        div.new-expense-input
+        //- div.new-expense-input
           div Description: 
           input(type="text", name="description", value=description)
         div.new-expense-input  
@@ -24,7 +24,7 @@ block layout-content
         div.new-expense-input  
           div Account Charged:
           input(type="text", name="charged_account_name", value=charged_account_name)
-        div.new-expense-input  
+        //- div.new-expense-input  
           div Notes: 
           input(type="text", name="notes", value=notes)
         div
