--- a/views/index.pug
+++ b/views/index.pug
@@ -8,9 +8,9 @@ block layout-content
       //- form#testConnection-form(action="/sequelize/authenticate", method="POST")
       //-   button(type="submit" name="Authenticate") Authenticate PostGreSQL Connection
       form#login-form(action="/users/handleLogin", method="POST")
-        p Sign in as guest to see sample data
-        button(type="submit" name="submit" value="guest") Sign In As Guest
-        p Or Log In/Register
+        //- p Sign in as guest to see sample data
+        //- button(type="submit" name="submit" value="guest") Sign In As Guest
+        p Log In or Register
         div
           div Username: 
             input(type="text", name="username")
