--- a/views/user-home.pug
+++ b/views/user-home.pug
@@ -10,8 +10,9 @@ block layout-content
       form#testExpense-form(action="/new-expense-form", method="GET")
         button(type="submit") New Expense
       form#testExpense-form(action="/expenses/createSampleExpenses", method="POST")
-        button(type="submit" name="numToCreate" value=5) Generate Sample Entry
-      include expense-table.pug
+        button(type="submit" name="numToCreate" value=1) Generate Sample Entry
+      if entries
+        include expense-table.pug
 
     div.account-settings 
       h3 Account Settings
